--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     // This dependency is used by the application.
     implementation libs.guava
 
+    //scalameter
+    implementation("com.storm-enroute:scalameter-core_2.13:0.21")
+
     // Use Scalatest for testing our library
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.scalatest:scalatest_2.13:3.2.16'
